--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,19 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project ("subtranslator")
 
-add_subdirectory ("srtcreator")
-add_subdirectory ("srtreader")
-add_subdirectory ("libsubtranslator")
+set(READER_EXE src/reader.cpp)
+set(WRITER_EXE src/writer.cpp)
+
+set(SOURCE_LIB src/srtreader.h
+               src/srtreader.cpp
+               src/srtwriter.h
+               src/srtwriter.cpp)
+
+add_library(sublib STATIC ${SOURCE_LIB})
+
+add_executable(readsrc ${READER_EXE})
+target_link_libraries(readsrc sublib)
+
+add_executable(writesrc ${WRITER_EXE})
+target_link_libraries(writesrc sublib)
 
